--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   firebase_core: ^3.14.0
   firebase_messaging: ^15.2.7
   url_launcher: ^6.3.1
+  shared_preferences: ^2.2.2
+
 
 
 dev_dependencies:
