--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,14 +11,14 @@ dependencies:
     sdk: flutter
   
   cupertino_icons: ^1.0.2
-  clevertap_plugin: 3.3.1
+  clevertap_plugin: 3.4.0
   geolocator: ^14.0.1      
   permission_handler: ^12.0.0 
   firebase_core: ^3.14.0
   firebase_messaging: ^15.2.7
   url_launcher: ^6.3.1
   shared_preferences: ^2.2.2
-
+  firebase_analytics: ^11.5.2
 
 
 dev_dependencies:
